--- a/Worktime/Views/MainWindow.xaml
+++ b/Worktime/Views/MainWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Metro:MetroWindow x:Class="Worktime.Views.MainWindow"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                   xmlns:Business="clr-namespace:Worktime.Business"
                    xmlns:D="http://schemas.microsoft.com/expression/blend/2008"
                    xmlns:Mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                    xmlns:Metro="http://metro.mahapps.com/winfx/xaml/controls"
                    xmlns:ViewModels="clr-namespace:Worktime.ViewModels"
-                   xmlns:Business="clr-namespace:Worktime.Business"
                    xmlns:Views1="clr-namespace:Worktime.Views"
                    x:Name="_metroWindow"
                    Title="Worktime"
@@ -79,13 +79,13 @@
         <Button Grid.Row="0"
                 Grid.Column="0"
                 Command="{Binding StartCommand}"
-                IsEnabled="{Binding StartEnabled}"
-                Content="Start" />
+                Content="Start"
+                IsEnabled="{Binding StartEnabled}" />
         <Button Grid.Row="0"
                 Grid.Column="1"
                 Command="{Binding StopCommand}"
-                IsEnabled="{Binding StopEnabled}"
-                Content="Stop" />
+                Content="Stop"
+                IsEnabled="{Binding StopEnabled}" />
         <Button Grid.Row="0"
                 Grid.Column="2"
                 Command="{Binding EditCommand}"
@@ -163,28 +163,43 @@
                Content="Week"
                FontWeight="Bold" />
         <Views1:ProgressbarView Grid.Row="5"
-                               Grid.Column="0"
-                               Margin="5"
-                               FilledProgressBarColor="#8B2222"
-                               MaximumLabel="{Binding Employee.WorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
-                               MinimumLabel="{Binding Employee.WorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
-                               ProgressBarColor="#228B22"
-                               ProgressBarValue="{Binding DayPercentageValue}" />
+                                Grid.Column="0"
+                                Margin="5"
+                                FilledProgressBarColor="#8B2222"
+                                MaximumLabel="{Binding Employee.WorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
+                                MinimumLabel="{Binding Employee.WorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
+                                ProgressBarColor="#228B22"
+                                ProgressBarValue="{Binding DayPercentageValue}">
+            <Views1:ProgressbarView.ToolTip>
+                <Label Content="{Binding DayPercentageValue}"
+                       ContentStringFormat="{}{0:0.00}%" />
+            </Views1:ProgressbarView.ToolTip>
+        </Views1:ProgressbarView>
         <Views1:ProgressbarView Grid.Row="5"
-                               Grid.Column="1"
-                               Margin="5"
-                               FilledProgressBarColor="#FFFF8800"
-                               MaximumLabel="{Binding Employee.BreakTimeRegular, Converter={StaticResource TimeSpanConverter}}"
-                               MinimumLabel="{Binding Employee.BreakTimeReal, Converter={StaticResource TimeSpanConverter}}"
-                               ProgressBarColor="#32CD32"
-                               ProgressBarValue="{Binding BreakPercentageValue}" />
+                                Grid.Column="1"
+                                Margin="5"
+                                FilledProgressBarColor="#FFFF8800"
+                                MaximumLabel="{Binding Employee.BreakTimeRegular, Converter={StaticResource TimeSpanConverter}}"
+                                MinimumLabel="{Binding Employee.BreakTimeReal, Converter={StaticResource TimeSpanConverter}}"
+                                ProgressBarColor="#32CD32"
+                                ProgressBarValue="{Binding BreakPercentageValue}">
+            <Views1:ProgressbarView.ToolTip>
+                <Label Content="{Binding BreakPercentageValue}"
+                       ContentStringFormat="{}{0:0.00}%" />
+            </Views1:ProgressbarView.ToolTip>
+        </Views1:ProgressbarView>
         <Views1:ProgressbarView Grid.Row="5"
-                               Grid.Column="2"
-                               Margin="5"
-                               FilledProgressBarColor="#640000"
-                               MaximumLabel="{Binding Employee.WeekWorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
-                               MinimumLabel="{Binding Employee.WeekWorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
-                               ProgressBarColor="#006400"
-                               ProgressBarValue="{Binding WeekPercentageValue}" />
+                                Grid.Column="2"
+                                Margin="5"
+                                FilledProgressBarColor="#640000"
+                                MaximumLabel="{Binding Employee.WeekWorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
+                                MinimumLabel="{Binding Employee.WeekWorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
+                                ProgressBarColor="#006400"
+                                ProgressBarValue="{Binding WeekPercentageValue}">
+            <Views1:ProgressbarView.ToolTip>
+                <Label Content="{Binding WeekPercentageValue}"
+                       ContentStringFormat="{}{0:0.00}%" />
+            </Views1:ProgressbarView.ToolTip>
+        </Views1:ProgressbarView>
     </Grid>
 </Metro:MetroWindow>
