--- a/Worktime/Views/AboutWindow.xaml
+++ b/Worktime/Views/AboutWindow.xaml
@@ -1,30 +1,30 @@
-﻿<Controls:MetroWindow x:Class="Worktime.Views.SettingsWindow"
+﻿<Controls:MetroWindow x:Class="Worktime.Views.AboutWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
                       xmlns:D="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:Mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:ViewModels="clr-namespace:Worktime.ViewModels"
                       x:Name="_metroWindow"
-                      Title="Settings"
-                      Width="300"
-                      Height="190"
+                      Title="About"
+                      Width="180"
+                      Height="180"
                       Mc:Ignorable="D"
-                      
                       BorderBrush="{Binding ElementName=_metroWindow, Path=NonActiveWindowTitleBrush}"
                       BorderThickness="1"
                       NonActiveWindowTitleBrush="{Binding ElementName=_metroWindow, Path=WindowTitleBrush}"
                       ResizeMode="NoResize"
                       ShowCloseButton="False"
                       WindowStartupLocation="CenterOwner">
-    <Controls:MetroWindow.DataContext>
-        <ViewModels:SettingsWindowViewModel />
-    </Controls:MetroWindow.DataContext>
     <Controls:MetroWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Resources/Icons.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="TextBlock">
+                <Setter Property="Margin" Value="2" />
+                <Setter Property="HorizontalAlignment" Value="Center" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
         </ResourceDictionary>
     </Controls:MetroWindow.Resources>
     <Controls:MetroWindow.IconTemplate>
@@ -41,8 +41,7 @@
     </Controls:MetroWindow.IconTemplate>
     <Controls:MetroWindow.RightWindowCommands>
         <Controls:WindowCommands>
-            <Button Click="ButtonOk_OnClick"
-                    Command="{Binding CancelCommand}">
+            <Button Click="ButtonOk_OnClick">
                 <Rectangle Width="15"
                            Height="15"
                            Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
@@ -62,54 +61,46 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="3"
+        <Image Grid.Row="0"
                Grid.Column="0"
-               Content="Top Most:" />
-        <CheckBox Grid.Row="3"
-                  Grid.Column="1"
-                  IsChecked="{Binding IsAlwaysOnTop}" />
-        <Label Grid.Row="4"
-               Grid.Column="0"
-               Content="State:" />
-        <ComboBox Grid.Row="4"
-                  Grid.Column="1"
-                  Margin="0,2,0,2"
-                  ItemsSource="{Binding States}"
-                  SelectedItem="{Binding SelectedState}" />
-        <Label Grid.Row="5"
-               Grid.Column="0"
-               Content="Accent:" />
-        <ComboBox Grid.Row="5"
-                  Grid.Column="1"
-                  Margin="0,2,0,2"
-                  ItemsSource="{Binding Accents}"
-                  SelectedItem="{Binding SelectedAccent}" />
-        <Label Grid.Row="6"
-               Grid.Column="0"
-               Content="Theme:" />
-        <ComboBox Grid.Row="6"
-                  Grid.Column="1"
-                  Margin="0,2,0,2"
-                  ItemsSource="{Binding Themes}"
-                  SelectedItem="{Binding SelectedTheme}" />
-        <Button x:Name="_buttonOk"
-                Grid.Row="8"
-                Grid.Column="1"
-                Width="50"
-                Height="20"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Click="ButtonOk_OnClick"
-                Command="{Binding SaveCommand}"
-                Content="Save" />
+               Width="161"
+               Source="../Resources/Temp.png"
+               Stretch="UniformToFill" />
+        <TextBlock x:Name="_textBlockVersion"
+                   Grid.Row="1"
+                   Grid.Column="0"
+                   Text="Version: 0.0.0.1" />
+        <TextBlock Grid.Row="2"
+                   Grid.Column="0">
+            <Hyperlink NavigateUri="https://github.com/MunkiWinchester/Worktime/releases"
+                       RequestNavigate="Hyperlink_OnRequestNavigate">
+                Releases
+            </Hyperlink>
+        </TextBlock>
+        <TextBlock Grid.Row="3"
+                   Grid.Column="0">
+            <Hyperlink NavigateUri="https://github.com/MunkiWinchester/Worktime/wiki"
+                       RequestNavigate="Hyperlink_OnRequestNavigate">
+                Wiki
+            </Hyperlink>
+        </TextBlock>
+        <TextBlock Grid.Row="4"
+                   Grid.Column="0">
+            <Hyperlink NavigateUri="https://github.com/MunkiWinchester/Worktime/issues/new"
+                       RequestNavigate="Hyperlink_OnRequestNavigate">
+                Report a problem
+            </Hyperlink>
+        </TextBlock>
+        <TextBlock Grid.Row="5"
+                   Grid.Column="0">
+            <Hyperlink NavigateUri="https://github.com/MunkiWinchester/Worktime/blob/master/LICENSE"
+                       RequestNavigate="Hyperlink_OnRequestNavigate">
+                License
+            </Hyperlink>
+        </TextBlock>
     </Grid>
 </Controls:MetroWindow>
