--- a/Worktime/Views/EditWindow.xaml
+++ b/Worktime/Views/EditWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroWindow x:Class="Worktime.Views.EditView"
+﻿<Controls:MetroWindow x:Class="Worktime.Views.EditWindow"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Business="clr-namespace:Worktime.Business"
@@ -12,15 +12,12 @@
                       Width="400"
                       Height="400"
                       Mc:Ignorable="D"
-                      BorderBrush="{Binding ElementName=_metroWindow, Path=WindowTitleBrush}"
+                      BorderBrush="{Binding ElementName=_metroWindow, Path=NonActiveWindowTitleBrush}"
                       BorderThickness="1"
                       NonActiveWindowTitleBrush="{Binding ElementName=_metroWindow, Path=WindowTitleBrush}"
                       ResizeMode="NoResize"
                       ShowCloseButton="False"
-                      ShowInTaskbar="False"
-                      Topmost="True"
-                      WindowStartupLocation="CenterOwner"
-                      WindowStyle="ToolWindow">
+                      WindowStartupLocation="CenterOwner">
     <Controls:MetroWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
