--- a/Worktime/App.xaml
+++ b/Worktime/App.xaml
@@ -5,15 +5,14 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <!-- MahApps -->
+                <!--  MahApps  -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-                <!-- accent resource -->
+                <!--  accent resource  -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Crimson.xaml" />
-                <!-- theme resource -->
-                <ResourceDictionary
-                    Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
+                <!--  theme resource  -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <Style TargetType="{x:Type Label}">
                 <Setter Property="HorizontalAlignment" Value="Left" />
@@ -25,9 +24,15 @@
             </Style>
             <Style TargetType="{x:Type Button}">
                 <Setter Property="Margin" Value="5" />
-                <Setter Property="Foreground" Value="#FF333333"/>
-                <Setter Property="Background" Value="#FFD8D8D9"/>
+                <Setter Property="Foreground" Value="#FF333333" />
+                <Setter Property="Background" Value="#FFD8D8D9" />
             </Style>
+            <ImageSource x:Key="WorktimeImage">
+                /Worktime;component/Resources/Images/Temp.png
+            </ImageSource>
+            <ImageSource x:Key="WorktimeIcon">
+                /Worktime;component/Resources/Images/Utilities-clock.ico
+            </ImageSource>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
