--- a/Worktime/App.xaml
+++ b/Worktime/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Worktime.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/MainWindow.xaml">
+             Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -35,6 +35,9 @@
             </ImageSource>
             <ImageSource x:Key="WorktimeIcon">
                 /Worktime;component/Resources/Images/Utilities-clock.ico
+            </ImageSource>
+            <ImageSource x:Key="WorktimeIconPng">
+                /Worktime;component/Resources/Images/Utilities-clock.png
             </ImageSource>
         </ResourceDictionary>
     </Application.Resources>
