--- a/Worktime/Views/MainWindow.xaml
+++ b/Worktime/Views/MainWindow.xaml
@@ -1,24 +1,26 @@
-﻿<Metro:MetroWindow x:Class="Worktime.Views.MainWindow"
-                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:Business="clr-namespace:Worktime.Business"
-                   xmlns:D="http://schemas.microsoft.com/expression/blend/2008"
-                   xmlns:Mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                   xmlns:Metro="http://metro.mahapps.com/winfx/xaml/controls"
-                   xmlns:Services="clr-namespace:WpfUtility.Services;assembly=WpfUtility"
-                   xmlns:ViewModels="clr-namespace:Worktime.ViewModels"
-                   xmlns:Views1="clr-namespace:Worktime.Views"
-                   x:Name="_metroWindow"
-                   Title="Worktime"
-                   Width="325"
-                   Height="200"
-                   Mc:Ignorable="D"
-                   BorderBrush="{Binding ElementName=_metroWindow, Path=WindowTitleBrush}"
-                   Closing="MainWindow_OnClosing"
-                   Deactivated="MainWindow_OnDeactivated"
-                   NonActiveWindowTitleBrush="{Binding ElementName=_metroWindow, Path=WindowTitleBrush}"
-                   ResizeMode="CanMinimize"
-                   WindowStartupLocation="Manual">
+﻿<Metro:MetroWindow
+    x:Class="Worktime.Views.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Business="clr-namespace:Worktime.Business"
+    xmlns:D="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:Mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Metro="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:Services="clr-namespace:WpfUtility.Services;assembly=WpfUtility"
+    xmlns:ViewModels="clr-namespace:Worktime.ViewModels"
+    xmlns:Views1="clr-namespace:Worktime.Views"
+    xmlns:tb="http://www.hardcodet.net/taskbar"
+    x:Name="_metroWindow"
+    Title="Worktime"
+    Width="325"
+    Height="200"
+    Mc:Ignorable="D"
+    BorderBrush="{Binding ElementName=_metroWindow, Path=WindowTitleBrush}"
+    Closing="MainWindow_OnClosing"
+    Deactivated="MainWindow_OnDeactivated"
+    NonActiveWindowTitleBrush="{Binding ElementName=_metroWindow, Path=WindowTitleBrush}"
+    ResizeMode="CanMinimize"
+    WindowStartupLocation="Manual">
     <Metro:MetroWindow.DataContext>
         <ViewModels:MainWindowViewModel />
     </Metro:MetroWindow.DataContext>
@@ -37,37 +39,36 @@
     </Window.TaskbarItemInfo>
     <Metro:MetroWindow.IconTemplate>
         <DataTemplate>
-            <Grid Width="{TemplateBinding Width}"
-                  Height="{TemplateBinding Height}"
-                  Margin="4,4,0,4"
-                  Background="Transparent"
-                  RenderOptions.BitmapScalingMode="HighQuality"
-                  RenderOptions.EdgeMode="Aliased">
+            <Grid
+                Width="{TemplateBinding Width}"
+                Height="{TemplateBinding Height}"
+                Margin="4,4,0,4"
+                Background="Transparent"
+                RenderOptions.BitmapScalingMode="HighQuality"
+                RenderOptions.EdgeMode="Aliased">
                 <Image Source="{StaticResource WorktimeIcon}" />
             </Grid>
         </DataTemplate>
     </Metro:MetroWindow.IconTemplate>
     <Metro:MetroWindow.RightWindowCommands>
         <Metro:WindowCommands>
-            <Button Command="{Binding SettingsClickedCommand}"
-                    CommandParameter="{Binding ElementName=_metroWindow}">
-                <Rectangle Width="20"
-                           Height="20"
-                           Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+            <Button Command="{Binding SettingsClickedCommand}" CommandParameter="{Binding ElementName=_metroWindow}">
+                <Rectangle
+                    Width="20"
+                    Height="20"
+                    Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
                     <Rectangle.OpacityMask>
-                        <VisualBrush Stretch="Fill"
-                                     Visual="{StaticResource appbar_settings}" />
+                        <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_settings}" />
                     </Rectangle.OpacityMask>
                 </Rectangle>
             </Button>
-            <Button Command="{Binding AboutClickedCommand}"
-                    CommandParameter="{Binding ElementName=_metroWindow}">
-                <Rectangle Width="10"
-                           Height="20"
-                           Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+            <Button Command="{Binding AboutClickedCommand}" CommandParameter="{Binding ElementName=_metroWindow}">
+                <Rectangle
+                    Width="10"
+                    Height="20"
+                    Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
                     <Rectangle.OpacityMask>
-                        <VisualBrush Stretch="Fill"
-                                     Visual="{StaticResource appbar_information}" />
+                        <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_information}" />
                     </Rectangle.OpacityMask>
                 </Rectangle>
             </Button>
@@ -87,105 +88,118 @@
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Button Grid.Row="0"
-                Grid.Column="0"
-                Command="{Binding StartCommand}"
-                Content="Start"
-                IsEnabled="{Binding StartEnabled}" />
-        <Button Grid.Row="0"
-                Grid.Column="1"
-                Command="{Binding StopCommand}"
-                Content="Stop"
-                IsEnabled="{Binding StopEnabled}" />
-        <Button Grid.Row="0"
-                Grid.Column="2"
-                Command="{Binding EditCommand}"
-                CommandParameter="{Binding ElementName=_metroWindow}"
-                Content="Edit" />
-        <Label Grid.Row="1"
-               Grid.Column="0"
-               Content="Clock in"
-               FontWeight="Bold" />
-        <Label Grid.Row="1"
-               Grid.Column="1"
-               Content="Cut"
-               FontWeight="Bold" />
-        <Label x:Name="_labelName"
-               Grid.Row="1"
-               Grid.Column="2"
-               Content="Overtime"
-               FontWeight="Bold" />
-        <Grid Grid.Row="2"
-              Grid.Column="0"
-              Grid.ColumnSpan="3"
-              Height="16">
+        <Button
+            Grid.Row="0"
+            Grid.Column="0"
+            Command="{Binding StartCommand}"
+            Content="Start"
+            IsEnabled="{Binding StartEnabled}" />
+        <Button
+            Grid.Row="0"
+            Grid.Column="1"
+            Command="{Binding StopCommand}"
+            Content="Stop"
+            IsEnabled="{Binding StopEnabled}" />
+        <Button
+            Grid.Row="0"
+            Grid.Column="2"
+            Command="{Binding EditCommand}"
+            CommandParameter="{Binding ElementName=_metroWindow}"
+            Content="Edit" />
+        <Label
+            Grid.Row="1"
+            Grid.Column="0"
+            Content="Clock in"
+            FontWeight="Bold" />
+        <Label
+            Grid.Row="1"
+            Grid.Column="1"
+            Content="Cut"
+            FontWeight="Bold" />
+        <Label
+            x:Name="_labelName"
+            Grid.Row="1"
+            Grid.Column="2"
+            Content="Overtime"
+            FontWeight="Bold" />
+        <Grid
+            Grid.Row="2"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            Height="16">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Row="0"
-                       Grid.Column="0"
-                       Padding="5,0,5,0"
-                       Text="{Binding Employee.Begin, Converter={StaticResource TimeSpanConverter}}" />
-            <TextBlock Grid.Row="0"
-                       Grid.Column="1"
-                       Padding="5,0,5,0"
-                       Text="{Binding Employee.EstimatedCut, Converter={StaticResource TimeSpanConverter}}" />
-            <TextBlock Grid.Row="0"
-                       Grid.Column="2"
-                       Padding="5,0,5,0"
-                       Text="{Binding Employee.Overtime, Converter={StaticResource TimeSpanConverter}}" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="0"
+                Padding="5,0,5,0"
+                Text="{Binding Employee.Begin, Converter={StaticResource TimeSpanConverter}}" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="1"
+                Padding="5,0,5,0"
+                Text="{Binding Employee.EstimatedCut, Converter={StaticResource TimeSpanConverter}}" />
+            <TextBlock
+                Grid.Row="0"
+                Grid.Column="2"
+                Padding="5,0,5,0"
+                Text="{Binding Employee.Overtime, Converter={StaticResource TimeSpanConverter}}" />
         </Grid>
-        <Label Grid.Row="4"
-               Grid.Column="0"
-               Content="Day"
-               FontWeight="Bold" />
-        <Label Grid.Row="4"
-               Grid.Column="1"
-               Content="Break"
-               FontWeight="Bold" />
-        <Label Grid.Row="4"
-               Grid.Column="2"
-               Content="Week"
-               FontWeight="Bold" />
-        <Views1:ProgressbarView Grid.Row="5"
-                                Grid.Column="0"
-                                Margin="5"
-                                FilledProgressBarColor="#8B2222"
-                                MaximumLabel="{Binding Employee.WorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
-                                MinimumLabel="{Binding Employee.WorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
-                                ProgressBarColor="#228B22"
-                                ProgressBarValue="{Binding DayPercentageValue}">
+        <Label
+            Grid.Row="4"
+            Grid.Column="0"
+            Content="Day"
+            FontWeight="Bold" />
+        <Label
+            Grid.Row="4"
+            Grid.Column="1"
+            Content="Break"
+            FontWeight="Bold" />
+        <Label
+            Grid.Row="4"
+            Grid.Column="2"
+            Content="Week"
+            FontWeight="Bold" />
+        <Views1:ProgressbarView
+            Grid.Row="5"
+            Grid.Column="0"
+            Margin="5"
+            FilledProgressBarColor="{StaticResource DayRed}"
+            MaximumLabel="{Binding Employee.WorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
+            MinimumLabel="{Binding Employee.WorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
+            ProgressBarColor="{StaticResource DayGreen}"
+            ProgressBarValue="{Binding DayPercentageValue}">
             <Views1:ProgressbarView.ToolTip>
-                <Label Content="{Binding DayPercentageValue}"
-                       ContentStringFormat="{}{0:0.00}%" />
+                <Label Content="{Binding DayPercentageValue}" ContentStringFormat="{}{0:0.00}%" />
             </Views1:ProgressbarView.ToolTip>
         </Views1:ProgressbarView>
-        <Views1:ProgressbarView Grid.Row="5"
-                                Grid.Column="1"
-                                Margin="5"
-                                FilledProgressBarColor="#FFFF8800"
-                                MaximumLabel="{Binding Employee.BreakTimeRegular, Converter={StaticResource TimeSpanConverter}}"
-                                MinimumLabel="{Binding Employee.BreakTimeReal, Converter={StaticResource TimeSpanConverter}}"
-                                ProgressBarColor="#32CD32"
-                                ProgressBarValue="{Binding BreakPercentageValue}">
+        <Views1:ProgressbarView
+            Grid.Row="5"
+            Grid.Column="1"
+            Margin="5"
+            FilledProgressBarColor="{StaticResource PauseYellow}"
+            MaximumLabel="{Binding Employee.BreakTimeRegular, Converter={StaticResource TimeSpanConverter}}"
+            MinimumLabel="{Binding Employee.BreakTimeReal, Converter={StaticResource TimeSpanConverter}}"
+            ProgressBarColor="{StaticResource PauseGreen}"
+            ProgressBarValue="{Binding BreakPercentageValue}">
             <Views1:ProgressbarView.ToolTip>
-                <Label Content="{Binding BreakPercentageValue}"
-                       ContentStringFormat="{}{0:0.00}%" />
+                <Label Content="{Binding BreakPercentageValue}" ContentStringFormat="{}{0:0.00}%" />
             </Views1:ProgressbarView.ToolTip>
         </Views1:ProgressbarView>
-        <Views1:ProgressbarView Grid.Row="5"
-                                Grid.Column="2"
-                                Margin="5"
-                                FilledProgressBarColor="#640000"
-                                MaximumLabel="{Binding Employee.WeekWorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
-                                MinimumLabel="{Binding Employee.WeekWorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
-                                ProgressBarColor="#006400"
-                                ProgressBarValue="{Binding WeekPercentageValue}">
+        <Views1:ProgressbarView
+            Grid.Row="5"
+            Grid.Column="2"
+            Margin="5"
+            FilledProgressBarColor="{StaticResource WeekRed}"
+            MaximumLabel="{Binding Employee.WeekWorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
+            MinimumLabel="{Binding Employee.WeekWorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
+            ProgressBarColor="{StaticResource WeekGreen}"
+            ProgressBarValue="{Binding WeekPercentageValue}">
             <Views1:ProgressbarView.ToolTip>
-                <Label Content="{Binding WeekPercentageValue}"
-                       ContentStringFormat="{}{0:0.00}%" />
+                <Label Content="{Binding WeekPercentageValue}" ContentStringFormat="{}{0:0.00}%" />
             </Views1:ProgressbarView.ToolTip>
         </Views1:ProgressbarView>
     </Grid>
