--- a/Worktime/App.xaml
+++ b/Worktime/App.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tb="http://www.hardcodet.net/taskbar"
-    xmlns:views="clr-namespace:Worktime.Views"
+    xmlns:tray="clr-namespace:Worktime.Views.Tray"
     Startup="Application_Startup">
     <Application.Resources>
         <ResourceDictionary>
@@ -51,11 +51,13 @@
             <tb:TaskbarIcon
                 x:Key="TaskbarIcon"
                 IconSource="/Resources/Images/Utilities-clock.ico"
-                MenuActivation="RightClick"
-                ToolTip="Keyboard Audio-Visualizer">
+                PopupActivation="RightClick">
                 <tb:TaskbarIcon.TrayToolTip>
-                    <views:TrayToolTip />
+                    <tray:ToolTip />
                 </tb:TaskbarIcon.TrayToolTip>
+                <tb:TaskbarIcon.TrayPopup>
+                    <tray:ContextMenu />
+                </tb:TaskbarIcon.TrayPopup>
             </tb:TaskbarIcon>
         </ResourceDictionary>
     </Application.Resources>
