--- a/Worktime/Updater/SplashScreenWindow.xaml
+++ b/Worktime/Updater/SplashScreenWindow.xaml
@@ -75,6 +75,7 @@
             BorderThickness="5"
             CornerRadius="10">
             <TextBlock
+                Margin="0,5,0,0"
                 Height="26"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
