--- a/Worktime/Views/MainWindow.xaml
+++ b/Worktime/Views/MainWindow.xaml
@@ -9,6 +9,7 @@
     xmlns:Services="clr-namespace:WpfUtility.Services;assembly=WpfUtility"
     xmlns:ViewModels="clr-namespace:Worktime.ViewModels"
     xmlns:Views1="clr-namespace:Worktime.Views"
+    xmlns:utility="clr-namespace:Worktime.Update"
     x:Name="_metroWindow"
     Title="Worktime"
     Width="325"
@@ -73,133 +74,154 @@
             </Button>
         </Metro:WindowCommands>
     </Metro:MetroWindow.RightWindowCommands>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="5" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <Button
-            Grid.Row="0"
-            Grid.Column="0"
-            Command="{Binding StartStopCommand}"
-            Content="Start"
-            IsEnabled="{Binding StartEnabled}" />
-        <Button
-            Grid.Row="0"
-            Grid.Column="1"
-            Command="{Binding StartStopCommand}"
-            Content="Stop"
-            IsEnabled="{Binding StopEnabled}" />
-        <Button
-            Grid.Row="0"
-            Grid.Column="2"
-            Command="{Binding EditCommand}"
-            CommandParameter="{Binding ElementName=_metroWindow}"
-            Content="Edit" />
-        <Label
-            Grid.Row="1"
-            Grid.Column="0"
-            Content="Clock in"
-            FontWeight="Bold" />
-        <Label
-            Grid.Row="1"
-            Grid.Column="1"
-            Content="Cut"
-            FontWeight="Bold" />
-        <Label
-            x:Name="_labelName"
-            Grid.Row="1"
-            Grid.Column="2"
-            Content="Overtime"
-            FontWeight="Bold" />
-        <Grid
-            Grid.Row="2"
-            Grid.Column="0"
-            Grid.ColumnSpan="3"
-            Height="16">
+    <DockPanel>
+        <StatusBar
+            Name="StatusBarUpdate"
+            DockPanel.Dock="Bottom"
+            Visibility="{Binding Visibility, Source={x:Static utility:Updater.StatusBar}}">
+            <StatusBarItem Margin="10,0,0,0" HorizontalAlignment="Center">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" FontSize="14">
+                        <Run FontWeight="SemiBold" Text="New Update Available" />
+                        <Run FontWeight="SemiBold">-</Run>
+                        <Hyperlink
+                            Command="{Binding UpdateCommand}"
+                            FontWeight="Bold"
+                            Foreground="{StaticResource IdealForegroundColorBrush}">
+                            <Run Text="Click To Update" />
+                        </Hyperlink>
+                    </TextBlock>
+                </StackPanel>
+            </StatusBarItem>
+        </StatusBar>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="5" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <TextBlock
+            <Button
                 Grid.Row="0"
                 Grid.Column="0"
-                Padding="5,0,5,0"
-                Text="{Binding Employee.Begin, Converter={StaticResource TimeSpanConverter}}" />
-            <TextBlock
+                Command="{Binding StartStopCommand}"
+                Content="Start"
+                IsEnabled="{Binding StartEnabled}" />
+            <Button
                 Grid.Row="0"
                 Grid.Column="1"
-                Padding="5,0,5,0"
-                Text="{Binding Employee.EstimatedCut, Converter={StaticResource TimeSpanConverter}}" />
-            <TextBlock
+                Command="{Binding StartStopCommand}"
+                Content="Stop"
+                IsEnabled="{Binding StopEnabled}" />
+            <Button
                 Grid.Row="0"
                 Grid.Column="2"
-                Padding="5,0,5,0"
-                Text="{Binding Employee.Overtime, Converter={StaticResource TimeSpanConverter}}" />
+                Command="{Binding EditCommand}"
+                CommandParameter="{Binding ElementName=_metroWindow}"
+                Content="Edit" />
+            <Label
+                Grid.Row="1"
+                Grid.Column="0"
+                Content="Clock in"
+                FontWeight="Bold" />
+            <Label
+                Grid.Row="1"
+                Grid.Column="1"
+                Content="Cut"
+                FontWeight="Bold" />
+            <Label
+                x:Name="_labelName"
+                Grid.Row="1"
+                Grid.Column="2"
+                Content="Overtime"
+                FontWeight="Bold" />
+            <Grid
+                Grid.Row="2"
+                Grid.Column="0"
+                Grid.ColumnSpan="3"
+                Height="16">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Padding="5,0,5,0"
+                    Text="{Binding Employee.Begin, Converter={StaticResource TimeSpanConverter}}" />
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Padding="5,0,5,0"
+                    Text="{Binding Employee.EstimatedCut, Converter={StaticResource TimeSpanConverter}}" />
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    Padding="5,0,5,0"
+                    Text="{Binding Employee.Overtime, Converter={StaticResource TimeSpanConverter}}" />
+            </Grid>
+            <Label
+                Grid.Row="4"
+                Grid.Column="0"
+                Content="Day"
+                FontWeight="Bold" />
+            <Label
+                Grid.Row="4"
+                Grid.Column="1"
+                Content="Break"
+                FontWeight="Bold" />
+            <Label
+                Grid.Row="4"
+                Grid.Column="2"
+                Content="Week"
+                FontWeight="Bold" />
+            <Views1:ProgressbarView
+                Grid.Row="5"
+                Grid.Column="0"
+                Margin="5"
+                FilledProgressBarColor="{StaticResource DayRed}"
+                MaximumLabel="{Binding Employee.WorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
+                MinimumLabel="{Binding Employee.WorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
+                ProgressBarColor="{StaticResource DayGreen}"
+                ProgressBarValue="{Binding DayPercentageValue}">
+                <Views1:ProgressbarView.ToolTip>
+                    <Label Content="{Binding DayPercentageValue}" ContentStringFormat="{}{0:0.00}%" />
+                </Views1:ProgressbarView.ToolTip>
+            </Views1:ProgressbarView>
+            <Views1:ProgressbarView
+                Grid.Row="5"
+                Grid.Column="1"
+                Margin="5"
+                FilledProgressBarColor="{StaticResource PauseYellow}"
+                MaximumLabel="{Binding Employee.BreakTimeRegular, Converter={StaticResource TimeSpanConverter}}"
+                MinimumLabel="{Binding Employee.BreakTimeReal, Converter={StaticResource TimeSpanConverter}}"
+                ProgressBarColor="{StaticResource PauseGreen}"
+                ProgressBarValue="{Binding BreakPercentageValue}">
+                <Views1:ProgressbarView.ToolTip>
+                    <Label Content="{Binding BreakPercentageValue}" ContentStringFormat="{}{0:0.00}%" />
+                </Views1:ProgressbarView.ToolTip>
+            </Views1:ProgressbarView>
+            <Views1:ProgressbarView
+                Grid.Row="5"
+                Grid.Column="2"
+                Margin="5"
+                FilledProgressBarColor="{StaticResource WeekRed}"
+                MaximumLabel="{Binding Employee.WeekWorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
+                MinimumLabel="{Binding Employee.WeekWorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
+                ProgressBarColor="{StaticResource WeekGreen}"
+                ProgressBarValue="{Binding WeekPercentageValue}">
+                <Views1:ProgressbarView.ToolTip>
+                    <Label Content="{Binding WeekPercentageValue}" ContentStringFormat="{}{0:0.00}%" />
+                </Views1:ProgressbarView.ToolTip>
+            </Views1:ProgressbarView>
         </Grid>
-        <Label
-            Grid.Row="4"
-            Grid.Column="0"
-            Content="Day"
-            FontWeight="Bold" />
-        <Label
-            Grid.Row="4"
-            Grid.Column="1"
-            Content="Break"
-            FontWeight="Bold" />
-        <Label
-            Grid.Row="4"
-            Grid.Column="2"
-            Content="Week"
-            FontWeight="Bold" />
-        <Views1:ProgressbarView
-            Grid.Row="5"
-            Grid.Column="0"
-            Margin="5"
-            FilledProgressBarColor="{StaticResource DayRed}"
-            MaximumLabel="{Binding Employee.WorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
-            MinimumLabel="{Binding Employee.WorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
-            ProgressBarColor="{StaticResource DayGreen}"
-            ProgressBarValue="{Binding DayPercentageValue}">
-            <Views1:ProgressbarView.ToolTip>
-                <Label Content="{Binding DayPercentageValue}" ContentStringFormat="{}{0:0.00}%" />
-            </Views1:ProgressbarView.ToolTip>
-        </Views1:ProgressbarView>
-        <Views1:ProgressbarView
-            Grid.Row="5"
-            Grid.Column="1"
-            Margin="5"
-            FilledProgressBarColor="{StaticResource PauseYellow}"
-            MaximumLabel="{Binding Employee.BreakTimeRegular, Converter={StaticResource TimeSpanConverter}}"
-            MinimumLabel="{Binding Employee.BreakTimeReal, Converter={StaticResource TimeSpanConverter}}"
-            ProgressBarColor="{StaticResource PauseGreen}"
-            ProgressBarValue="{Binding BreakPercentageValue}">
-            <Views1:ProgressbarView.ToolTip>
-                <Label Content="{Binding BreakPercentageValue}" ContentStringFormat="{}{0:0.00}%" />
-            </Views1:ProgressbarView.ToolTip>
-        </Views1:ProgressbarView>
-        <Views1:ProgressbarView
-            Grid.Row="5"
-            Grid.Column="2"
-            Margin="5"
-            FilledProgressBarColor="{StaticResource WeekRed}"
-            MaximumLabel="{Binding Employee.WeekWorkTimeRegular, Converter={StaticResource TimeSpanConverter}}"
-            MinimumLabel="{Binding Employee.WeekWorkTimeReal, Converter={StaticResource TimeSpanConverter}}"
-            ProgressBarColor="{StaticResource WeekGreen}"
-            ProgressBarValue="{Binding WeekPercentageValue}">
-            <Views1:ProgressbarView.ToolTip>
-                <Label Content="{Binding WeekPercentageValue}" ContentStringFormat="{}{0:0.00}%" />
-            </Views1:ProgressbarView.ToolTip>
-        </Views1:ProgressbarView>
-    </Grid>
+    </DockPanel>
 </Metro:MetroWindow>
