The "Windows Accent" accent now gets updated if the user changes his windows colors

--- a/Worktime/App.xaml
+++ b/Worktime/App.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tb="http://www.hardcodet.net/taskbar"
+    Exit="Application_Exit"
     xmlns:tray="clr-namespace:Worktime.Views.Tray"
     Startup="Application_Startup">
     <Application.Resources>
